--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -68,11 +68,10 @@ jobs:
         cd openwrt
         $GITHUB_WORKSPACE/$DIY_P1_SH
 
-    - name: GPU patch
+    - name: DRM_PANFROST
       run: |
-        cd openwrt
-        wget https://raw.githubusercontent.com/blacksamuraiiii/seewo-sv21-rk3568/main/seewo-sv21-3568.patch
-        git apply seewo-sv21-3568.patch
+        cd openwrt/target/linux/rockchip/armv8
+        echo "CONFIG_DRM_PANFROST=y" >> config-5.15
 
     - name: Update feeds
       run: cd openwrt && ./scripts/feeds update -a
