--- a/istoreos/feeds.conf
+++ b/istoreos/feeds.conf
@@ -1,8 +1,8 @@
-src-include defaults feeds.conf.default
-src-git h69k_oled https://github.com/jjm2473/luci-app-oled.git;master
-src-git third_party https://github.com/linkease/istore-packages.git;main
-src-git diskman https://github.com/jjm2473/luci-app-diskman.git;dev
-src-git oaf https://github.com/jjm2473/OpenAppFilter.git;dev2
-src-git linkease_nas https://github.com/linkease/nas-packages.git;master
-src-git linkease_nas_luci https://github.com/linkease/nas-packages-luci.git;main
-src-git jjm2473_apps https://github.com/jjm2473/openwrt-apps.git;main
+src-git packages https://github.com/jjm2473/packages.git;istoreos-23.05
+src-git luci https://github.com/jjm2473/luci.git;istoreos-23.05
+src-git routing https://git.openwrt.org/feed/routing.git;openwrt-23.05
+src-git telephony https://git.openwrt.org/feed/telephony.git;openwrt-23.05
+# istore
+src-git store https://github.com/linkease/istore.git;main
+# argon, etc.
+src-git third https://github.com/jjm2473/openwrt-third.git;main
