--- a/.config
+++ b/.config
@@ -7077,9 +7077,9 @@ CONFIG_PACKAGE_haveged=y
 # CONFIG_PACKAGE_jq is not set
 CONFIG_PACKAGE_jshn=y
 # CONFIG_PACKAGE_kmod is not set
-CONFIG_PACKAGE_lcd4linux-custom=y
-CONFIG_LCD4LINUX_CUSTOM_NEEDS_libgd=y
-CONFIG_LCD4LINUX_CUSTOM_NEEDS_libusb=y
+# CONFIG_PACKAGE_lcd4linux-custom=y
+# CONFIG_LCD4LINUX_CUSTOM_NEEDS_libgd=y
+# CONFIG_LCD4LINUX_CUSTOM_NEEDS_libusb=y
 
 #
 # Drivers ---
@@ -7090,8 +7090,8 @@ CONFIG_LCD4LINUX_CUSTOM_NEEDS_libusb=y
 # CONFIG_LCD4LINUX_CUSTOM_DRIVER_CrystalFontz is not set
 # CONFIG_LCD4LINUX_CUSTOM_DRIVER_Curses is not set
 # CONFIG_LCD4LINUX_CUSTOM_DRIVER_Cwlinux is not set
-CONFIG_LCD4LINUX_CUSTOM_DRIVER_D4D=y
-CONFIG_LCD4LINUX_CUSTOM_DRIVER_dpf=y
+# CONFIG_LCD4LINUX_CUSTOM_DRIVER_D4D=y
+# CONFIG_LCD4LINUX_CUSTOM_DRIVER_dpf=y
 # CONFIG_LCD4LINUX_CUSTOM_DRIVER_EA232graphic is not set
 # CONFIG_LCD4LINUX_CUSTOM_DRIVER_EFN is not set
 # CONFIG_LCD4LINUX_CUSTOM_DRIVER_FutabaVFD is not set
@@ -7099,7 +7099,7 @@ CONFIG_LCD4LINUX_CUSTOM_DRIVER_dpf=y
 # CONFIG_LCD4LINUX_CUSTOM_DRIVER_G15 is not set
 # CONFIG_LCD4LINUX_CUSTOM_DRIVER_GLCD2USB is not set
 # CONFIG_LCD4LINUX_CUSTOM_DRIVER_IRLCD is not set
-CONFIG_LCD4LINUX_CUSTOM_DRIVER_LCD2USB=y
+# CONFIG_LCD4LINUX_CUSTOM_DRIVER_LCD2USB=y
 # CONFIG_LCD4LINUX_CUSTOM_DRIVER_LCDTerm is not set
 # CONFIG_LCD4LINUX_CUSTOM_DRIVER_LEDMatrix is not set
 # CONFIG_LCD4LINUX_CUSTOM_DRIVER_LPH7508 is not set
@@ -7128,7 +7128,7 @@ CONFIG_LCD4LINUX_CUSTOM_DRIVER_LCD2USB=y
 # CONFIG_LCD4LINUX_CUSTOM_DRIVER_TeakLCM is not set
 # CONFIG_LCD4LINUX_CUSTOM_DRIVER_Trefon is not set
 # CONFIG_LCD4LINUX_CUSTOM_DRIVER_USBHUB is not set
-CONFIG_LCD4LINUX_CUSTOM_DRIVER_USBLCD=y
+# CONFIG_LCD4LINUX_CUSTOM_DRIVER_USBLCD=y
 # CONFIG_LCD4LINUX_CUSTOM_DRIVER_VNC is not set
 # CONFIG_LCD4LINUX_CUSTOM_DRIVER_WincorNixdorf is not set
 
@@ -7138,7 +7138,7 @@ CONFIG_LCD4LINUX_CUSTOM_DRIVER_USBLCD=y
 # CONFIG_LCD4LINUX_CUSTOM_PLUGIN_apm is not set
 # CONFIG_LCD4LINUX_CUSTOM_PLUGIN_asterisk is not set
 # CONFIG_LCD4LINUX_CUSTOM_PLUGIN_button_exec is not set
-CONFIG_LCD4LINUX_CUSTOM_PLUGIN_cpuinfo=y
+# CONFIG_LCD4LINUX_CUSTOM_PLUGIN_cpuinfo=y
 # CONFIG_LCD4LINUX_CUSTOM_PLUGIN_dbus is not set
 # CONFIG_LCD4LINUX_CUSTOM_PLUGIN_diskstats is not set
 # CONFIG_LCD4LINUX_CUSTOM_PLUGIN_dvb is not set
@@ -7154,8 +7154,8 @@ CONFIG_LCD4LINUX_CUSTOM_PLUGIN_cpuinfo=y
 # CONFIG_LCD4LINUX_CUSTOM_PLUGIN_imon is not set
 # CONFIG_LCD4LINUX_CUSTOM_PLUGIN_isdn is not set
 # CONFIG_LCD4LINUX_CUSTOM_PLUGIN_kvv is not set
-CONFIG_LCD4LINUX_CUSTOM_PLUGIN_loadavg=y
-CONFIG_LCD4LINUX_CUSTOM_PLUGIN_meminfo=y
+# CONFIG_LCD4LINUX_CUSTOM_PLUGIN_loadavg=y
+# CONFIG_LCD4LINUX_CUSTOM_PLUGIN_meminfo=y
 # CONFIG_LCD4LINUX_CUSTOM_PLUGIN_mpd is not set
 # CONFIG_LCD4LINUX_CUSTOM_PLUGIN_mpris_dbus is not set
 # CONFIG_LCD4LINUX_CUSTOM_PLUGIN_mysql is not set
@@ -7163,12 +7163,12 @@ CONFIG_LCD4LINUX_CUSTOM_PLUGIN_meminfo=y
 # CONFIG_LCD4LINUX_CUSTOM_PLUGIN_netinfo is not set
 # CONFIG_LCD4LINUX_CUSTOM_PLUGIN_pop3 is not set
 # CONFIG_LCD4LINUX_CUSTOM_PLUGIN_ppp is not set
-CONFIG_LCD4LINUX_CUSTOM_PLUGIN_proc_stat=y
+# CONFIG_LCD4LINUX_CUSTOM_PLUGIN_proc_stat=y
 # CONFIG_LCD4LINUX_CUSTOM_PLUGIN_qnaplog is not set
 # CONFIG_LCD4LINUX_CUSTOM_PLUGIN_seti is not set
 # CONFIG_LCD4LINUX_CUSTOM_PLUGIN_statfs is not set
 # CONFIG_LCD4LINUX_CUSTOM_PLUGIN_uname is not set
-CONFIG_LCD4LINUX_CUSTOM_PLUGIN_uptime=y
+# CONFIG_LCD4LINUX_CUSTOM_PLUGIN_uptime=y
 # CONFIG_LCD4LINUX_CUSTOM_PLUGIN_w1retap is not set
 # CONFIG_LCD4LINUX_CUSTOM_PLUGIN_xmms is not set
 # CONFIG_PACKAGE_lcdproc-clients is not set
