--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -83,8 +83,8 @@ jobs:
     - name: gpu patch
       run: |
         cd openwrt
-        wget https://raw.githubusercontent.com/blacksamuraiiii/seewo-sv21-rk3568/main/seewo-sv21-3568.patch
-        git apply seewo-sv21-3568.patch
+        wget https://github.com/immortalwrt/immortalwrt/commit/c10101fc0cf186196a354a91a75bf2856630dd68.patch
+        git apply c10101fc0cf186196a354a91a75bf2856630dd68.patch
         
     - name: Load custom configuration
       run: |
