--- a/.github/workflows/build-openwrt.yml
+++ b/.github/workflows/build-openwrt.yml
@@ -74,6 +74,17 @@ jobs:
     - name: Install feeds
       run: cd openwrt && ./scripts/feeds install -a
 
+    - name: rm&git argon theme
+      run: |
+        cd openwrt/feeds/luci/themes
+        rm -rf luci-theme-argon
+        git clone -b 18.06 https://github.com/jerrykuku/luci-theme-argon.git luci-theme-argon
+        
+    - name: replace argon theme
+      run: |
+        cd openwrt/feeds/luci/collections/luci/
+        sed -i 's/luci-theme-bootstrap/luci-theme-argon/' Makefile
+
     - name: Load custom configuration
       run: |
         [ -e files ] && mv files openwrt/files
