pip3 install Mako

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -54,6 +54,10 @@ jobs:
         sudo mkdir -p /workdir
         sudo chown $USER:$GROUPS /workdir
 
+    - name: pip3 install Mako
+      run: |
+        pip3 install Mako
+
     - name: Clone source code
       working-directory: /workdir
       run: |
